--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPf5xQ26fAeySsMkDi+52HZ",
+      "authorship_tag": "ABX9TyOlgW1edSHCRHKf6fmT519r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -371,6 +371,102 @@
         "  </Properties>\n",
         "</AlteryxDocument>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "INNER:\n",
+        "<Connections>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"1\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Left\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"2\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Right\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"3\" Connection=\"Join\" />\n",
+        "      <Destination ToolID=\"4\" Connection=\"Input\" />\n",
+        "    </Connection>\n",
+        "  </Connections>\n",
+        "\n",
+        "LEFT OUTER:\n",
+        "<Connections>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"1\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Left\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"2\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Right\" />\n",
+        "    </Connection>\n",
+        "    <Connection name=\"#1\">\n",
+        "      <Origin ToolID=\"3\" Connection=\"Left\" />\n",
+        "      <Destination ToolID=\"5\" Connection=\"Input\" />\n",
+        "    </Connection>\n",
+        "    <Connection name=\"#2\">\n",
+        "      <Origin ToolID=\"3\" Connection=\"Join\" />\n",
+        "      <Destination ToolID=\"5\" Connection=\"Input\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"5\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"4\" Connection=\"Input\" />\n",
+        "    </Connection>\n",
+        "  </Connections>\n",
+        "\n",
+        "LEFT UNJOIN:\n",
+        "<Connections>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"1\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Left\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"2\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Right\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"3\" Connection=\"Left\" />\n",
+        "      <Destination ToolID=\"4\" Connection=\"Input\" />\n",
+        "    </Connection>\n",
+        "\n",
+        "RIGHT UNJOIN:\n",
+        "  <Connections>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"1\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Left\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"2\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Right\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"3\" Connection=\"Right\" />\n",
+        "      <Destination ToolID=\"4\" Connection=\"Input\" />\n",
+        "    </Connection>\n",
+        "  </Connections>\n",
+        "\n",
+        "LEFT UNJOIN:\n",
+        "  <Connections>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"1\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Left\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"2\" Connection=\"Output\" />\n",
+        "      <Destination ToolID=\"3\" Connection=\"Right\" />\n",
+        "    </Connection>\n",
+        "    <Connection>\n",
+        "      <Origin ToolID=\"3\" Connection=\"Left\" />\n",
+        "      <Destination ToolID=\"4\" Connection=\"Input\" />\n",
+        "    </Connection>\n",
+        "  </Connections>"
+      ],
+      "metadata": {
+        "id": "a1zRCWSeVthR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
